# ARC

./: .gitignore  .readthedocs.yaml  ARC.csv  ARC1.1.0ChangesLog.xlsx  CHANGELOG.md  CITATION.cff  LICENSE.md  README.md  README_ARCH_Variable_Conventions.md  README_ARC_Variable_Conventions.md  REUSE.toml  arc_field_types_readme.md  crf_metadata.csv  pyproject.toml
.github/workflows/: get_schema_on_tag.yml  reuse.yml  test-all.yml  test-critical-high.yml  test-medium-low.yml
Changes_Log/: ARC1.0.3ChangesLog.xlsx  ARC1.2.3_ChangesLOG.xlsx  ARC1.4.0_ChangesLOG.xlsx
LICENSES/: MIT.txt
Lists/conditions/: Site.csv  Symptoms.csv
Lists/demographics/: Occupation.csv
Lists/drugs/: Antibiotics.csv  Anticoagulant.csv  Antiviral.csv  AntiviralPrev.csv  IVfluids.csv  Immunosuppressants.csv  Other.csv  Steroids.csv  Type.csv  nsaids.csv
Lists/followup/: outcome.csv  sequelae.csv
Lists/inclusion/: Diseases.csv
Lists/outcome/: Diseases.csv  Outcome.csv
Lists/pathogens/: All.csv  SampleType.csv
docs/: conf.py  index.rst  requirements.txt
docs/examples/: README.md  covid-study-core.csv  covid-study-long.csv  example_data.csv  example_parser.toml  one-row-pp-covid.toml
docs/sources/: arc-field-types.rst  arc-latest.rst  arc-schema.rst  arc-variable-naming.rst  arc.rst  archetype-crfs-and-templates.rst  contributors.rst  data-capture-schema.rst  isaric-data-schema.rst  special-field-types.rst  using-arc.rst  variable-naming.rst  writing-a-parser.rst
docs/sources/lists/: lists.rst
docs/sources/lists/conditions/: comorbidities.rst  complications.rst  index.rst  sites.rst  symptoms.rst
docs/sources/lists/demographics/: countries.rst  index.rst  occupations.rst  race.rst
docs/sources/lists/drugs/: antibiotics.rst  anticoagulants.rst  antifungals.rst  antivirals.rst  immunosuppressants.rst  index.rst  ivfluids.rst  nsaids.rst  steroids.rst  types.rst
docs/sources/lists/followup/: index.rst  outcome.rst  sequelae.rst
docs/sources/lists/inclusion/: diseases.rst  index.rst
docs/sources/lists/outcome/: diseases.rst  index.rst  outcome.rst
docs/sources/lists/pathogens/: all.rst  genomic-repository.rst  index.rst  other.rst  sample-type.rst
schemas/: ARC.csv  README.md  arc_v1.4.0_isaric_long.schema.json  codes.py  draft_parser.py  global_arc_v1.4.0_parser.toml  isaric-core.json  isaric_schema.py  isaric_transformations.py  template-isaric-long.json
tests/: test_arc.py  test_generated_parser.py  test_lists.py  test_schema_generation.py  test_skip_logic.py  test_units.py  test_units_schema.py
units/: unit_classes.py  unit_conversion.json  unit_conversion.schema.json  utils.py
