[build-system]
  requires = ["hatchling"]
  build-backend = "hatchling.build"

[project]
  name = "arc"
  version = "1.2.1"
  description = "ARC (Acute and Rapid onset disease Case report form) - standardised clinical data collection"
  readme = "README.md"
  license = "MIT"
  requires-python = ">=3.12"
  authors = [{ name = "ISARIC" }]
  dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "jsonschema",
  ]

  [project.optional-dependencies]
    dev = [
      "pytest",
      "adtl>=0.13.3",
    ]

    docs = [
      "Sphinx",
      "sphinx-autobuild",
      "sphinxcontrib-email",
      "sphinx-copybutton",
      "sphinx-gallery",
      "sphinx-design",
      "myst-parser",
      "pylint",
      "furo",
      "numpydoc",
      "nb2plots",
      "jupyter-sphinx",
    ]

  [project.urls]
    Homepage = "https://github.com/ISARICResearch/ARC"
    Repository = "https://github.com/ISARICResearch/ARC"
    Documentation = "https://isaric-arc.readthedocs.io"

[tool.hatch.build.targets.wheel]
  packages = ["schemas", "units", "tests"]

  [tool.hatch.build.targets.wheel.force-include]
    "Lists" = "arc_data/Lists"

[tool.hatch.build.targets.sdist]
  include = ["schemas/", "units/"]

[tool.pytest.ini_options]
  markers = [
    "critical: critical severity test (must pass)",
    "high: high severity test",
    "medium: medium severity test",
    "low: low severity test",
  ]
